--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,9 @@
     <!-- Favicon -->
     <link rel="icon" href="./Assets/Immagini/favicon-32x32.png" type="image/png" sizes="32x32">
     <!-- Opengraph -->
-    <meta property="og:title" content="Portfolio di Simone Romanò"/>
+    <meta property="og:title" content="Progetto Portfolio"/>
     <meta property="og:description" content="Portfolio di Simone Romanò"/>
+    <meta property="og:image" content="https://postimg.cc/DSPDVgYd">
     <meta property="og:url" content="https://"/>
     <meta property="og:type" content="website"/>
     <meta property="og:locale" content="it_IT"/>
