--- a/cv.html
+++ b/cv.html
@@ -19,7 +19,7 @@
 <body>
 
     <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-lg bg-primary shadow-lg sticky-top">
+    <nav class="navbar navbar-expand-md bg-primary shadow-lg sticky-top">
         <div class="container">
           <a class="navbar-brand" href="/index.html#intro">
             <img src="./Assets/Immagini/Logo.png" alt="logo">
@@ -157,7 +157,7 @@
       </footer>
 
     <!-- SCRIPT -->
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/3c27f39276.js" crossorigin="anonymous"></script>
 </body>
 </html>
