--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
     <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-lg bg-primary shadow-lg sticky-top">
+    <nav class="navbar navbar-expand-md bg-primary shadow-lg sticky-top">
         <div class="container">
           <a class="navbar-brand" href="/index.html#intro">
             <img src="./Assets/Immagini/Logo.png" alt="logo">
