--- a/cv.html
+++ b/cv.html
@@ -144,9 +144,9 @@
     </div>
     
     <!-- FOOTER -->
-      <footer class="d-flex flex-wrap justify-content-around align-items-center py-3 py-md-5 bg-primary footer-content">
+    <footer class="d-flex flex-wrap flex-column flex-sm-row justify-content-around align-items-center py-4 py-sm-5 bg-primary footer-content">
         <div class="col-md-4 d-flex align-items-center">
-          <span class="mb-3 mb-sm-0 fs-5 text-muted">&copy; 2024 Simone Romanò</span>
+          <span class="mb-4 mb-sm-0 mb-md-0 fs-5 text-muted">&copy; 2024 Simone Romanò</span>
         </div>
         <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
           <li class="ms-0"><a href="https://github.com/SimoneRomano3" target="_blank"><i class="fa-brands fa-github fa-2xl" style="color: #495057;"></i></a></li>
