--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     </div>
 
     <!-- PROGETTI -->
-    <div id="progetti" class="container-fluid bg-gradient skill-content d-flex align-items-center justify-content-center">
+    <div id="progetti" class="container-fluid bg-gradient skill-content d-flex align-items-center   justify-content-center">
       <div class="text-center p-5">
         <h2 class="text-uppercase fs-1">PROGETTI</h2>
         <p class="fs-4">In aggiornamento</p>
@@ -112,17 +112,17 @@
     </div>
     
     <!-- FOOTER -->
-      <footer class="d-flex flex-wrap justify-content-around align-items-center py-3 py-md-5 bg-primary footer-content">
-        <div class="col-md-4 d-flex align-items-center">
-          <span class="mb-3 mb-sm-0 fs-5 text-muted">&copy; 2024 Simone Romanò</span>
-        </div>
-        <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-          <li class="ms-0"><a href="https://github.com/SimoneRomano3" target="_blank"><i class="fa-brands fa-github fa-2xl" style="color: #495057;"></i></a></li>
-          <li class="ms-4"><a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook fa-2xl" style="color: #495057;"></i></a></li>
-          <li class="ms-4"><a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-square-instagram fa-2xl" style="color: #495057;"></i></a></li>
-          <li class="ms-4"><a href="https://www.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin fa-2xl" style="color: #495057;"></i></a></li>
-        </ul>
-      </footer>
+    <footer class="d-flex flex-wrap flex-column flex-sm-row justify-content-around align-items-center py-4 py-sm-5 bg-primary footer-content">
+      <div class="col-md-4 d-flex align-items-center">
+        <span class="mb-4 mb-sm-0 mb-md-0 fs-5 text-muted">&copy; 2024 Simone Romanò</span>
+      </div>
+      <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+        <li class="ms-0"><a href="https://github.com/SimoneRomano3" target="_blank"><i class="fa-brands fa-github fa-2xl" style="color: #495057;"></i></a></li>
+        <li class="ms-4"><a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook fa-2xl" style="color: #495057;"></i></a></li>
+        <li class="ms-4"><a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-square-instagram fa-2xl" style="color: #495057;"></i></a></li>
+        <li class="ms-4"><a href="https://www.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin fa-2xl" style="color: #495057;"></i></a></li>
+      </ul>
+    </footer>
 
     <!-- SCRIPT -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
